# G-Frame

./: AUTHORS.rst  LICENSE  README.md  install.sh  requirements.txt  run.sh  setup.cfg  setup.py
gframe/: __init__.py  app.py  google_photos.py  local_media.py
gframe/client_secret/: __init__.py
gframe/config/: __init__.py  config.json
gframe/credentials/: __init__.py
gframe/json/: __init__.py
gframe/json/client_secret/: __init__.py
gframe/json/config/: __init__.py  config.json
gframe/json/credentials/: __init__.py  credentials.json
gframe/json/log/: __init__.py
gframe/json_config/client_secret/: __init__.py
gframe/json_config/config/: __init__.py
gframe/json_config/credentials/: __init__.py
gframe/json_config/log/: __init__.py  log.json
gframe/log/: __init__.py
gframe/templates/: client_secret.html  config.html  play.html  setup.html
install/: autostart  rc.local
